--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "Help Desk - Front End",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --open --host 0.0.0.0",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --open --host 0.0.0.0 --port 9100",
     "build": "cross-env NODE_ENV=production webpack ",
     "format": "prettier --write 'packages/**/*.js'",
     "test": "jest --watchAll --coverage"
