--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: docker-node-backend
     restart: always
     build: 
-      context: ./backend/
+      context: .
     ports: 
       - '8883:8883'
     links:
@@ -13,11 +13,11 @@ services:
     container_name: docker-node-frontend
     restart: always
     build: 
-      context: ./frontend/
+      context: .
     ports: 
       - '8080:8080'
     links:
-      - docker-node-backend
+      - backend
   mongo:
     container_name: mongo
     image: mongo
